improve the slides

--- a/slides/pseudoinverse-least-squares.tex
+++ b/slides/pseudoinverse-least-squares.tex
@@ -31,6 +31,7 @@
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{问题的引入}
 
 考虑解线性方程组$A\mathbf{x} = \mathbf{b}$的问题。我们知道当$A$是可逆方阵的时候，该线性方程组有唯一解$\mathbf{x} = A^{-1}\mathbf{b}$.
 
@@ -66,6 +67,7 @@ $$A^+ = A^{-1}$$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{广义逆的定义与性质}
 
 \begin{block}{矩阵的广义逆，Generalized Inverse}
 $m\times n$矩阵$A$的广义逆指的是一个$n\times m$的矩阵$X$, 满足
@@ -76,9 +78,9 @@ $$AXA = A$$
 \pause
 
 \begin{block}{广义逆的普遍存在性}
-任意矩阵$A$的广义逆$A^-$总存在。设$P,Q$分别为$m$阶与$n$阶可逆阵，使得$A = P \begin{pmatrix} I_r & 0 \\ 0 & 0 \end{pmatrix} Q$, 那么
-$$A^- = Q^{-1} \begin{pmatrix} I_r & * \\ *' & *'' \end{pmatrix} P^{-1}$$
-其中$r = r(A)$, $*,*',*''$分别是大小为$r \times (n-r)$, $(m-r) \times r$, 以及$(m-r) \times (n-r)$的块，块中元素可以任取。
+任意矩阵$A$的广义逆$A^-$总存在。设$P,Q$分别为$m$阶与$n$阶可逆阵，使得$A = P \begin{pmatrix} I_r & 0 \\ 0 & 0 \end{pmatrix}_{m\times n}\!\!\!\!\!\!\!\!\!\!\! Q$, 那么
+$$A^- = Q^{-1} \begin{pmatrix} I_r & * \\ *' & *'' \end{pmatrix}_{n\times m}\!\!\!\!\!\!\!\!\!\!\! P^{-1}$$
+其中$r = r(A)$, $*,*',*''$分别是大小为$r \times (m-r)$, $(n-r) \times r$, 以及$(n-r) \times (m-r)$的块，块中元素可以任取。
 \end{block}
 
 \end{frame}
@@ -90,6 +92,7 @@ $$A^- = Q^{-1} \begin{pmatrix} I_r & * \\ *' & *'' \end{pmatrix} P^{-1}$$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{广义逆与线性方程组的解}
 
 \begin{block}{广义逆与齐次线性方程组}
 齐次线性方程组$A\mathbf{x} = \mathbf{0}$的解的全体为
@@ -129,6 +132,7 @@ $$\mathbf{b} = A A^- \mathbf{b}.$$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{伪逆的定义}
 
 \begin{block}{Moore-Penrose伪逆，Pseudoinverse}
 $m\times n$矩阵$A$的Moore-Penrose伪逆，或简称伪逆，指的是同时满足如下四个条件的$n\times m$矩阵$X$
@@ -148,6 +152,7 @@ XAX = X \\
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{伪逆的性质}
 
 \begin{block}{伪逆的存在性与唯一性}
 任意$m\times n$矩阵$A$的伪逆$A^+$都存在，而且
@@ -162,6 +167,7 @@ $$\Sigma^+ = \begin{pmatrix}
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{伪逆的性质}
 
 \begin{block}{伪逆的另一种表达}
 $A$的奇异值分解又可以写作\(\displaystyle A = U\Sigma V^T = \sum\limits_{i=1}^r \sigma_i \mathbf{u}_i \mathbf{v}_i^T \). 于是我们又有$A^+$的另一种表达
@@ -178,8 +184,9 @@ $$A^+ = \sum\limits_{i=1}^r \sigma_i^{-1} \mathbf{v}_i \mathbf{u}_i^T$$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{伪逆与线性方程组}
 
-\begin{block}{伪逆与线性方程组}
+\begin{block}{伪逆与线性方程组解的关系}
 对于线性方程组$A\mathbf{x} = \mathbf{b}$（$\mathbf{b}$可以是零向量也可以不是），它若有解，则解可以由系数矩阵$A$的Moore-Penrose伪逆统一给出：
 $$A^+\mathbf{b} + (I - A^+A)\mathbf{w}$$
 其中$\mathbf{w}$是任意一个$n$维列向量。当然，$A\mathbf{x} = \mathbf{b}$有解的充要条件为
@@ -195,6 +202,7 @@ $$AA^+\mathbf{b} = \mathbf{b}$$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘法：问题分析}
 我们来考虑非齐次线性方程组$A\mathbf{x} = \mathbf{b}$无解的情况，$A$是一个$m\times n$矩阵。此时，我们有
@@ -213,6 +221,7 @@ $$\argmin_{\widehat{\mathbf{x}}}\Vert A\widehat{\mathbf{x}} - \mathbf{b} \Vert,$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘法：法方程组}
 {\bfseries 事实}：$\mathbb{R}^m$中的一个点，与一个线性子空间中距离最短的点是这个点在这个子空间上的投影。于是
@@ -240,6 +249,7 @@ $$A^TA\widehat{\mathbf{x}} = A^T\mathbf{b}$$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘解}
 \begin{itemize}
@@ -254,6 +264,7 @@ $$\widehat{\mathbf{x}} = (A^TA)^{-1}A^T\mathbf{b}.$$
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘解}
 {\bfseries 重要}：$\mathbf{x}^+ := A^+\mathbf{b}$是长度最小的最小二乘解。其中$A^+$为矩阵$A$的Moore-Penrose伪逆。
@@ -278,6 +289,7 @@ A^TA\cdot\mathbf{x}^+ & = A^TAA^+ \cdot \mathbf{b} \\
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘解}
 （2）$\mathbf{x}^+$是最小二乘解中长度最小者：设$\widehat{\mathbf{x}}_0$也是一个最小二乘解，即满足$A^TA\widehat{\mathbf{x}}_0 = A^T\mathbf{b}$. 于是
@@ -301,6 +313,7 @@ A (\widehat{\mathbf{x}}_0-\mathbf{x}^+) = \mathbf{0} & \Longrightarrow \sum\limi
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘解}
 但是，我们知道$\mathbf{u}_1,\ldots,\mathbf{u}_r$是线性无关的（甚至是相互正交的），而且$\sigma_1,\ldots,\sigma_r$都是大于0的实数。于是
@@ -319,6 +332,7 @@ $$\mathbf{v}_1^T (\widehat{\mathbf{x}}_0-\mathbf{x}^+) = \cdots = \mathbf{v}_r^T
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘解}
 因此，我们有
@@ -331,6 +345,7 @@ $$\Vert \widehat{\mathbf{x}}_0 \Vert^2 = \Vert \mathbf{x}^+ + (\widehat{\mathbf{
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{最小二乘法}
 
 \begin{block}{最小二乘解}
 {\color{red}注意}！最小二乘解$\mathbf{x}^+ = A^+\mathbf{b}$包含了$A^TA$可逆时的唯一最小二乘解$(A^TA)^{-1}A^T\mathbf{b}$.
