add hyperlink to aux slides

--- a/content-2/class-6.tex
+++ b/content-2/class-6.tex
@@ -75,7 +75,7 @@ $$A^T(A\widehat{\mathbf{x}}-\mathbf{b}) = 0$$
 当$A$列满秩时，在这题里就是$x_i$不全相等时，$A^TA$是可逆方阵，上述正则方程有唯一解
 $$\widehat{\mathbf{x}} = (A^TA)^{-1}A^T\mathbf{b}.$$
 
-当$A$列不满秩时，最小二乘解不唯一，但长度最小的最小二乘解（被称作最优最小二乘解）是唯一的。这部分参阅补充内容，有时间就讲。
+当$A$列不满秩时，最小二乘解不唯一，但长度最小的最小二乘解（被称作最优最小二乘解）是唯一的。这部分参阅补充内容，参见\href{https://github.com/wenh06/buaa-advanced-algebra-2021/blob/master/pdf/slides-pseudoinverse-least-squares.pdf}{slides-pseudoinverse-least-squares.pdf}。
 
 
 \newpageorvspace
