--- a/slides/svd.tex
+++ b/slides/svd.tex
@@ -118,7 +118,7 @@ $MM^T$与$M^TM$的特征值非负，且二者的正特征值之集相同。
 任取$MM^T$的一个特征值$\lambda$以及相应的一个特征向量$\mathbf{x}$，即有$MM^T\mathbf{x} = \lambda\mathbf{x}$。那么$\mathbf{x}^TMM^T\mathbf{x} = \mathbf{x}^T\lambda\mathbf{x}$，即
 \begin{equation}
 \label{eq1}
-\Vert M^T\mathbf{x} \Vert^2 = \lambda \Vert \mathbf{x} \Vert^2.
+\lVert M^T\mathbf{x} \rVert^2 = \lambda \lVert \mathbf{x} \rVert^2.
 \end{equation}
 所以$\lambda$非负。同理$M^TM$的特征值也都是非负实数。\newline\pause
 设$\lambda > 0$,还是由$MM^T\mathbf{x} = \lambda\mathbf{x}$，有
