add hyperlinks to notebooks

--- a/assignments/assignment-3.tex
+++ b/assignments/assignment-3.tex
@@ -16,7 +16,7 @@ $$(\alpha_{i_1},\cdots,\alpha_{i_m}) \begin{pmatrix} x_{i_1} \\ \vdots \\ x_{i_m
 $$(\beta_{i_1},\cdots,\beta_{i_m}) = \begin{pmatrix} 1 & & \makebox(0,0){\text{\huge $\ast$}} \\ & \ddots & \\ \makebox(0,0){\text{\huge\bf 0}} & & 1 \\ & & \\ & \makebox(0,0){\text{\huge\bf 0}} & \\ & & \end{pmatrix}$$
 要注意的是改变$\alpha_1,\cdots,\alpha_n$排列次序组成矩阵$A$，可能得到不同的极大线性无关组。
 
-矩阵化为阶梯形可以利用如下的程序进行
+矩阵化为阶梯形可以利用如下的\href{https://github.com/wenh06/buaa-advanced-algebra-2021/blob/master/notebooks/assignment-3.ipynb}{程序}进行
 \begin{center}
 \begin{lstlisting}[language=Python]
 import sympy as sp
