--- a/content-2/class-6.tex
+++ b/content-2/class-6.tex
@@ -234,7 +234,7 @@ x \\ y
 1 \\ 1 \\ 1 \\ 1
 \end{pmatrix} = \beta
 $$
-那么这个问题的最小二乘解为$(A^TA)^{-1}A^T\beta$, 编程解如下
+那么这个问题的最小二乘解为$(A^TA)^{-1}A^T\beta$, \href{https://github.com/wenh06/buaa-advanced-algebra-2021/blob/master/notebooks/spring-class-6.ipynb}{编程}解如下
 \begin{lstlisting}
 >>> import numpy as np
 
