--- a/content/class-1.tex
+++ b/content/class-1.tex
@@ -130,7 +130,7 @@ $$
 $$
 \end{itemize}
 
-可以用程序验证答案（在$\mathbb{Q}(\lambda)$中的解，适合一般情况，不适合$\lambda = 1,-2$这样的退化的情况）：
+可以用\href{https://github.com/wenh06/buaa-advanced-algebra-2021/blob/master/notebooks/class-1.ipynb}{程序}验证答案（在$\mathbb{Q}(\lambda)$中的解，适合一般情况，不适合$\lambda = 1,-2$这样的退化的情况）：
 \begin{center}
 \begin{lstlisting}[language=Python]
 import sympy as sp
