--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,8 @@
 % \input{content-2/class-3}
 % \input{content-2/class-4}
 % \input{content-2/class-5}
-\input{content-2/class-6}
+% \input{content-2/class-6}
+\input{content-2/class-7}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
