fix typos and adjust formats for spring class 7

--- a/common_preamble.tex
+++ b/common_preamble.tex
@@ -57,10 +57,12 @@
 \setCJKmainfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.TTF}
 \setCJKsansfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.TTF}
 
-\usepackage{latexsym,amscd,color}
-\usepackage{amsmath,amsfonts,amssymb,mathrsfs}
+\usepackage{latexsym}
+\usepackage{color}
+\usepackage{amsmath,amsfonts,amssymb,amscd,mathrsfs}
 \usepackage{enumerate,euscript}
-\usepackage{amssymb,url,xspace}
+\usepackage{url}
+\usepackage{xspace}
 \usepackage{tikz-cd}
 \usepackage[all,cmtip]{xy}
 \usepackage{dashbox}
