Updates from Overleaf

--- a/common_preamble.tex
+++ b/common_preamble.tex
@@ -55,7 +55,8 @@
 % \setCJKsansfont[Path = fonts/, BoldFont = simhei.ttf]{simfang.ttf}
 
 \setCJKmainfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.TTF}
-\setCJKsansfont[Path = fonts/, BoldFont = simhei.ttf]{JDLangZhengTi.TTF}
+\setCJKsansfont{Noto Sans CJK SC}
+\setCJKmonofont{Noto Sans Mono CJK SC}
 
 \usepackage{latexsym}
 \usepackage{color}
