--- a/main.tex
+++ b/main.tex
@@ -1,39 +1,55 @@
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% compiler: XeLatex
+% TeX Live version: 2020
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{common_preamble}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-\title{2022春高等代数习题课}
+% \title{2022秋高等代数习题课}
 
-% \input{content-2/class-1}
-% \input{content-2/class-2}
-% \input{content-2/class-3}
-% \input{content-2/class-4}
-% \input{content-2/class-5}
-% \input{content-2/class-6}
-\input{content-2/class-7}
+% \input{content/class-1.tex}
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Archive
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 习题课
+
+% \title{2022春高等代数习题课}
+
+% \input{2021-archive/content-2/class-1}
+% \input{2021-archive/content-2/class-2}
+% \input{2021-archive/content-2/class-3}
+% \input{2021-archive/content-2/class-4}
+% \input{2021-archive/content-2/class-5}
+% \input{2021-archive/content-2/class-6}
+% \input{2021-archive/content-2/class-7}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 课后作业
 
 % \title{2022春高等代数课后习题}
 
-% \input{assignments/assignment-11}
+% \input{2021-archive/assignments/assignment-11}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-% \title{2021秋高等代数习题课}
+\title{2021秋高等代数习题课}
 
-% \input{content/class-1}
-% \input{content/class-2}
-% \input{content/class-3}
-% \input{content/class-4}
-% \input{content/class-5}
-% \input{content/class-6}
-% \input{content/class-7}
+\input{2021-archive/content/class-1}
+% \input{2021-archive/content/class-2}
+% \input{2021-archive/content/class-3}
+% \input{2021-archive/content/class-4}
+% \input{2021-archive/content/class-5}
+% \input{2021-archive/content/class-6}
+% \input{2021-archive/content/class-7}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -44,18 +60,18 @@
 
 % \title{2021秋高等代数课后习题}
 
-% \input{assignments/2022spring-extras}
+% \input{2021-archive/assignments/2022spring-extras}
 
-% \input{assignments/assignment-1}
-% \input{assignments/assignment-2}
-% \input{assignments/assignment-3}
-% \input{assignments/assignment-4}
-% \input{assignments/assignment-5}
-% \input{assignments/assignment-6}
-% \input{assignments/assignment-7}
-% \input{assignments/assignment-8}
-% \input{assignments/assignment-9}
-% \input{assignments/assignment-10}
+% \input{2021-archive/assignments/assignment-1}
+% \input{2021-archive/assignments/assignment-2}
+% \input{2021-archive/assignments/assignment-3}
+% \input{2021-archive/assignments/assignment-4}
+% \input{2021-archive/assignments/assignment-5}
+% \input{2021-archive/assignments/assignment-6}
+% \input{2021-archive/assignments/assignment-7}
+% \input{2021-archive/assignments/assignment-8}
+% \input{2021-archive/assignments/assignment-9}
+% \input{2021-archive/assignments/assignment-10}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -64,8 +80,8 @@
 
 % \input{slides_preamble}
 
-% \input{slides/pseudoinverse-least-squares}
+% \input{2021-archive/slides/pseudoinverse-least-squares}
 
-% % \input{slides/svd}
+% \input{2021-archive/slides/svd}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
