add 2022 autumn class 1 tex source

--- a/main.tex
+++ b/main.tex
@@ -8,9 +8,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-% \title{2022秋高等代数习题课}
+\title{2022秋高等代数习题课}
 
-% \input{content/class-1.tex}
+\input{content/class-1.tex}
 
 
 
@@ -41,9 +41,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 习题课
 
-\title{2021秋高等代数习题课}
+% \title{2021秋高等代数习题课}
 
-\input{2021-archive/content/class-1}
+% \input{2021-archive/content/class-1}
 % \input{2021-archive/content/class-2}
 % \input{2021-archive/content/class-3}
 % \input{2021-archive/content/class-4}
